@startuml
hide empty fields
hide empty methods
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam BackgroundColor #FEFEFE
allowmixing
skinparam packageStyle Frame

package campingplatz.utils {
    class DetailedProduct{
    -imagePath: String
    -desc: String
    +DetailedProduct(String name, Money price, String imagePath, String description)
    +getImagePath(): String
    +setImagePath(String value): void
    +getDesc(): String
    +setDesc(String value): void
    }
    class Pair<T1,T2>{
    +first: T1
    +second: T2
    +Pair(T1 first, T2 second)
    +getFirst(): T1
    +setFirst(T1 value): void
    +getSecond(): T2
    +setSecond(T2 value): void
    }
    interface Priced{
    +getPrice(): MonetaryAmount
    +getPreDiscountPrice(): MonetaryAmount
    +hasDiscount(): Boolean
    }
    class Utils{
    -Utils()
    +{static} createInstance(Class<T> cls): T
    +{static} min(LocalDateTime first, LocalDateTime second): LocalDateTime
    +{static} max(LocalDateTime first, LocalDateTime second): LocalDateTime
    +{static} formatDate(LocalDateTime date): String
    +{static} formatDateTime(LocalDateTime date): String
    +{static} unitToTemporalAmount(ChronoUnit intervalUnit): TemporalAmount
    +{static} clampLength(String input): String
    +{static} clampPrice(Money input): Money
    }
    class ListOfPriced <T extends Priced> {
    +getPrice(): MonetaryAmount
    +getPreDiscountPrice(): MonetaryAmount
    }
    class BusinessTimeController<<Controller>> {
    -businessTime: BusinessTime
    +BusinessTimeController(BusinessTime businessTime)
    +fTime(Model model, int days, HttpServletRequest request): String
    }

}

DetailedProduct --|> org.salespointframework.catalog.Product
ListOfPriced --|> java.util.ArrayList: <bind T->T>
ListOfPriced ..|> Priced

@enduml